--- a/portofolio.html
+++ b/portofolio.html
@@ -24,7 +24,7 @@
         <ul class="navigation-list list">         
           <li><a class="link-style link" href="index.html">Studio</a></li>
           <li><a class="link-style link" href="portofolio.html">Portofolio</a></li>
-          <li><a class="link-style link" href="contacts.html">Contacts</a></li>
+          <li><a class="link-style link" href="#">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-list list ">
