--- a/portofolio.html
+++ b/portofolio.html
@@ -22,9 +22,9 @@
               rel="noreferrer noopener"><span class="color-web">Web</span><span class="color-studio-header">Studio</span>
             </a>
         <ul class="navigation-list list">         
-          <li><a class="link-style link" href="index.html">Studio</a></li>
-          <li><a class="link-style link" href="portofolio.html">Portofolio</a></li>
-          <li><a class="link-style link" href="#">Contacts</a></li>
+          <li class="nav-list-item"><a class="link" href="index.html">Studio</a></li>
+          <li class="nav-list-item"><a class=" link" href="portofolio.html">Portofolio</a></li>
+          <li class="nav-list-item"><a class=" link" href="#">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-list list ">
