--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="modal is-hidden" data-modal>
     <div class="inner-div">
-      <div class="modal-button"><button  data-modal-close ><svg width="17" height="17"><use  href="./images/icons.svg#icon-Vector-1"></use></svg></button>
+      <div class="modal-button"><button class="close-button" data-modal-close ><svg width="17" height="17"><use  href="./images/icons.svg#icon-Vector-1"></use></svg></button>
         </div>
         
     </div>
@@ -29,7 +29,7 @@
           rel="noreferrer noopener"><span class="color-web">Web</span><span class="color-studio-header">Studio</span>
         </a>
         <ul class="navigation-list list">
-          <li class="nav-list-item"><a class="link-style link" href="index.html">Studio</a></li>
+          <li class="nav-list-item "><a class="curent-page link-style link" href="index.html">Studio</a></li>
           <li class="nav-list-item"><a class="link-style link" href="portofolio.html">Portofolio</a></li>
           <li class="nav-list-item"><a class="link-style link" href="#">Contacts</a></li>
         </ul>
