--- a/portofolio.html
+++ b/portofolio.html
@@ -23,7 +23,7 @@
             </a>
         <ul class="navigation-list list">         
           <li class="nav-list-item"><a class="link" href="index.html">Studio</a></li>
-          <li class="nav-list-item"><a class=" link" href="portofolio.html">Portofolio</a></li>
+          <li class="nav-list-item "><a class=" curent-page link" href="portofolio.html">Portofolio</a></li>
           <li class="nav-list-item"><a class=" link" href="#">Contacts</a></li>
         </ul>
       </nav>
